<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="ru_ok">Ок</string>
	<string name="ru_cancel">Отмена</string>
    <string name="app_name">Clubs</string>
    <string name="app_id">126821424022595</string>
    <string name="action_settings">Settings</string>

    <string name="enter_acc">Войти через аккаунт</string>
    <string name="exit">Выход</string>
	<string name="email">Email</string>
	<string name="username">Логин</string>
	<string name="nickname">Ник</string>
	<string name="parol">Пароль</string>
	<string name="parol_new">Новый Пароль</string>
	<string name="parol_repeat">Подтвердите пароль</string>
	
	<string name="enter_btn_label">Войти</string>
	<string name="reg_btn_label">Зарегистрировать</string>
	<string name="social_enter">Войти через соцсеть</string>
	<string name="social_use_data">Использовать данные соц.сетей:</string>
	<string name="search">Поиск</string>
	<string name="search_caterories">Категории поиска</string>
	<string name="reg_me">Регистрация</string>
	<string name="reg_me_s"><u>Регистрация</u></string>
	<string name="restore_pwd"><u>Забыли пароль</u></string>
	<string name="personal_data">ЛИЧНЫЕ ДАННЫЕ</string>
	
	<string name="photo">фото</string>
	<string name="photo_count">%1$d фото</string>
	<string name="marked_users_count">еще %1$d отметок</string>
	<string name="place_descripton">%1$s \nМетро:\n %2$s \nАдрес:\n %3$s \nКухня:\n %4$s \nСредний счет:\n %5$s \nРабочее время:\n %6$s \nТелефон:\n %7$s \nСайт:\n %8$s \n </string>
	<string name="followers">подписчики</string>
	<string name="follow">подписан</string>
	<string name="messages">Сообщения</string>
	<string name="label_place_announcements">Анонсы,События</string>
	<string name="label_mark_person">Отметиться на фото</string>
	<string name="msg_mark_person"> Коснитесь фото,\nчтобы отметиться</string>
	
	<string name="agreent_label1">Создавая аккаунт вы принимаете</string>
	<string name="agreent_label2"><u>Условия пользовательского соглашения</u></string>
	
	<string name="fill_name_and_pwd">Для входа заполните email и пароль</string>
	
	<string name="edit_profile">Редактировать профиль</string>
	<string name="profile_settings">Настройки</string>
		
	<string name="login_faile_toast">Неверный пароль или имя пользователя</string>
	<string name="warning_fill_all_required_fields">Заполните все обязательные поля</string>
	<string name="warning_different_pwd_and_pwd2">Пароль и подтверждение не совпадают</string>
	<string name="no_data_loaded">Фотографии загружаются</string>
	<string name="more_comments"><u>ещё %1$d комментариев</u></string>	
	<string name="news_author_title">%1$s прокомментировал(а) ваше фото</string>
	<string name="title_who_is">Кто на фото?</string>
	<string name="i_am">Я</string>
	<string name="title_announcement">Анонсы</string>
	<string name="title_events">События</string>
	
	<string name="title_license">Пользовательское соглашение</string>
	<string name="title_policy">Политика конфиденциальности</string>
	<string name="title_news">Новости</string>
	
	<string name="menu_announcement">Анонсы</string>
	<string name="menu_friends_labels">Отметки друзей</string>
	<string name="menu_profile">Профиль пользователя</string>
	<string name="menu_places">Места</string>
	<string name="menu_interview">Интервью</string>
	<string name="menu_refresh">Обновить</string>
	<string name="title_settings">Настройки</string>
	<string name="title_edit_profile">Редактирование проф.</string>
	
	<string name="title_followers">Подписчики</string>
	<string name="title_following">Подписки</string>

	<string name="settings_title_push">Push-уведомления</string>
	
	<string name="settings_title_uvediml">УВЕДОМЛЕНИЯ</string>
	
	<string name="settings_title_push_likes">Отметки "нравится"</string>
	<string name="settings_title_push_comments">Комментарии</string>
	<string name="settings_title_push_user_tags">Отметки друзей на фото</string>
	<string name="settings_title_push_new_message">Новое сообщение</string>
	<string name="settings_title_push_new_contacts">Новые контакты</string>			
	<string name="settings_title_contact_us">Связь с нами</string>
	<string name="settings_title_exit">Выйти</string>
	<string name="msg_send_email">Написать email</string>
	
	<string name="profile_photo">Фото профиля</string>
	<string name="profile_photo_select">Выбрать фото профиля</string>
	<string name="profile_hint_name">Имя</string>
	<string name="profile_hint_phone">Телефон</string>
	<string name="profile_btn_change_pwd">Сменить пароль</string>
	<string name="profile_btn_save">Сохранить</string>
	<string name="profile_title_privacy">Приватность</string>
	<string name="profile_title_privacy_big">ПРИВАТНОСТЬ</string>
	<string name="profile_privacy_photo_labels">Отметки на фото для всех</string>
	<string name="profile_privacy_msg_from_all">Сообщения от всех</string>
	
	<string name="btn_subcribed">Вы подписаны</string>
	<string name="btn_subcribe">Подписаться</string>
	<string name="btn_unsubcribe">Отписаться</string>
	<string name="btn_send_mg">Написать сообщение</string>
	<string name="title_change_pwd">Изменить пароль</string>
	
	<string name="title_search_category">Поиск</string>
	<string name="search_empty">Не выбрано</string>
	<string name="search_zaklad">Заведение</string>
	<string name="search_category">Категория</string>
	<string name="search_cousine">Кухня</string>
	<string name="search_bill">Средний счет</string>
	<string name="search_metro">Метро</string>
	
	<string name="title_dlg_title_error">Ошибка</string>
	<string name="title_dlg_parol_error">Ошибка авторизации</string>
	<string name="dlg_parol_error_msg">Неверное имя пользователя или пароль</string>
	<string name="btn_approve">Подтвердить</string>
	<string name="title_dlg_parol_restore">Восстановление пароля</string>
	<string name="dlg_parol_restore_msg">Ваш пароль направлен на e-mail указанный при регистрации</string>
	
	<string name="yes">Да</string>
	<string name="no">Нет</string>
	
	<string name="alert_exit">Вы уверены, что хотите выйти из Вашего аккаунта?</string>
	
	<string name="msg_no_place_ann">В разделе этого места еще нет анонсов и событий</string>
	<string name="menu_delete">Удалить</string>
	
	<string name="msg_no_news">Нет новостей</string>
	<string name="msg_pwd_changes">Новый пароль сохранён</string>
	<string name="msg_changes_saved">Изменения сохранены</string>
	<string name="msg_photo_liked">Ваше фото нравится</string>
	<string name="msg_photo_liked_cnt">%1$d пользователю</string>
	<string name="label_read_more"><u>Читать подробнее</u></string>
	
	<string name="label_ask_allow_subscriber">Пользователь хочет подписаться \nна ваши фото</string>
</resources>
