<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search" 
        android:showAsAction="always" android:icon="@android:drawable/ic_menu_search" android:title="@string/search" android:actionViewClass="android.widget.SearchView">
        
    </item>
    
    <item android:id="@+id/menu_refresh"
          android:title="@string/menu_refresh" 
          android:showAsAction="always" 
          android:icon="@drawable/ic_menu_refresh"/>
    
    <item android:id="@+id/menu_announcement"
          android:title="@string/menu_announcement" />
    
    <item android:id="@+id/menu_friends_labels"
          android:title="@string/menu_friends_labels" />
    
    <item android:id="@+id/menu_profile"
          android:title="@string/menu_profile" />
    
    <item android:id="@+id/menu_places"
          android:title="@string/menu_places" />
    
    <item android:id="@+id/menu_interview"
          android:title="@string/menu_interview" />
    
    <item android:id="@+id/menu_exit"
          android:title="@string/exit" />
    
    
</menu>
