<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_overlay_2"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/sp_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" />
    
    <TextView
        android:id="@+id/tv_cousine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_cousine"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <Spinner
        android:id="@+id/sp_cousine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" />
    
	<TextView
	    android:id="@+id/tv_bill"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/search_bill"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<Spinner
        android:id="@+id/sp_bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" />
	
	<TextView
	    android:id="@+id/tv_metro"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/search_metro"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<Spinner
        android:id="@+id/sp_metro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:gravity="center_horizontal">

		<Button
		    android:id="@+id/btn_ok"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:minWidth="100dp"
		    android:text="@string/ru_ok" />

		<Button
		    android:id="@+id/btn_cancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/ru_cancel" 
		    android:minWidth="100dp"/>

	</LinearLayout>
	
</LinearLayout>
