<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/screen_bg" >

	<RelativeLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_bg" >

        <ImageView
            android:id="@+id/photo_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />
        
    </RelativeLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_overlay_2"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_change_photo"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_black_rect_non_transparent"
                        android:minHeight="25dp"
                        android:onClick="onSelectPhoto"
                        android:padding="5dp"
                        android:text="@string/profile_photo_select"
                        android:textAppearance="?android:attr/textAppearanceMediumInverse"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/news_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp" >

                    <LinearLayout
                        android:id="@+id/cnt_likes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" >

                        <ImageView
                            android:id="@+id/img_likes"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/heart_v2_pink" />

                        <TextView
                            android:id="@+id/tv_likes_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#F0F" />
                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:id="@+id/cnt_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <ImageView
                            android:id="@+id/img_msg"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:src="@drawable/messages_pink" />

                        <TextView
                            android:id="@+id/tv_comments_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#F0F" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/personal_data"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <LinearLayout
                    android:id="@+id/gray_diveder_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#CCC"
                    android:orientation="vertical" >
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/profile_hint_name" />

                <EditText
                    android:id="@+id/edit_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nickname" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/profile_hint_phone"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/title_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_title_privacy"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:visibility="gone" >

                    <CheckBox
                        android:id="@+id/cb_tags_private"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_privacy_photo_labels" />

                    <CheckBox
                        android:id="@+id/cb_messages_private"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_title_push_user_tags" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_change_pwd"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_black_rect_non_transparent"
                        android:minHeight="25dp"
                        android:padding="5dp"
                        android:text="@string/profile_btn_change_pwd"
                        android:textAppearance="?android:attr/textAppearanceMediumInverse"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/bg_black_rect_non_transparent"
                        android:minHeight="25dp"
                        android:text="@string/profile_btn_save"
                        android:textAppearance="?android:attr/textAppearanceMediumInverse"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
