<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".ProfileActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <RelativeLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_bg" >

        <ImageView
            android:id="@+id/photo_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />
        
    </RelativeLayout>

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay_2"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            tools:ignore="UselessParent" >

            <LinearLayout
                android:id="@+id/cnt_edit_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/cnt_helper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_edit_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_black_rect_non_transparent"
                        android:onClick="onEditProfileClick"
                        android:padding="5dp"
                        android:text="@string/edit_profile" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp" >

                <LinearLayout
                    android:id="@+id/cnt_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/img_likes"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/heart_v2_pink" />

                    <TextView
                        android:id="@+id/tv_likes_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#F0F" />

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/cnt_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/img_msg"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:src="@drawable/messages_pink" />

                    <TextView
                        android:id="@+id/tv_comments_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#F0F" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gray_diveder_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#CCC"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_photo_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="42sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/photo"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/followers_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_followers_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textAppearance="?android:attr/textAppearanceMedium" 
                            android:textSize="42sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textAppearance="?android:attr/textAppearanceSmall" 
                            android:textSize="18sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/followings_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_follow_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="42sp"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/follow"
                            android:textSize="18sp"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gray_diveder_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="#CCC"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/messages_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <TextView
                    android:id="@+id/label_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messages"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_unread_msg_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_pink"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/gray_diveder_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#CCC"
                android:orientation="vertical" >

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>
